fixed tests after authentication added
